<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/settings">

    <ListPreference android:key="@string/prefs_which_daisy_key"
                      android:title="@string/prefs_which_daisy_title"
                      android:summary="@string/prefs_which_daisy_summary"
                      android:dialogTitle="@string/prefs_which_daisy_dialog_title"/>
  
    <ListPreference android:key="@string/prefs_button_count_key"
                      android:title="@string/prefs_button_count_title"
                      android:summary="@string/prefs_button_count_summary"
                      android:dialogTitle="@string/prefs_button_count_dialog_title"
                      android:entries="@array/prefs_button_count_entries"
                      android:entryValues="@array/prefs_button_count_entries"/>
                      
  </PreferenceCategory>
  
  <PreferenceCategory android:title="@string/prefs_button_config">
  
    <PreferenceScreen android:title="@string/prefs_button1_config">
    
        <EditTextPreference android:key="@string/prefs_button1_label_key"
                            android:dialogTitle="@string/prefs_button_label_dialog_title"
                            android:dialogMessage="@string/prefs_button_label_summary"
                            android:title="@string/prefs_button_label_title"
                            android:summary="@string/prefs_button_label_summary"
                            android:defaultValue="Button"/>

        <ListPreference android:key="@string/prefs_button1_pin_key"
                        android:title="@string/prefs_button_pin_title"
                        android:summary="@string/prefs_button_pin_summary"
                        android:dialogTitle="@string/prefs_button_pin_dialog_title"
                        android:entries="@array/prefs_pin_entries"
                        android:entryValues="@array/prefs_pin_entry_values"/>

        <ListPreference android:key="@string/prefs_button1_type_key"
                        android:title="@string/prefs_button_type_title"
                        android:summary="@string/prefs_button_type_summary"
                        android:dialogTitle="@string/prefs_button_type_dialog_title"
                        android:entries="@array/prefs_button_type_entries"
                        android:entryValues="@array/prefs_button_type_entry_values"/>
                                   
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/prefs_button2_config">
    
        <EditTextPreference android:key="@string/prefs_button2_label_key"
                            android:dialogTitle="@string/prefs_button_label_dialog_title"
                            android:dialogMessage="@string/prefs_button_label_summary"
                            android:title="@string/prefs_button_label_title"
                            android:summary="@string/prefs_button_label_summary"
                            android:defaultValue="Button"/>

        <ListPreference android:key="@string/prefs_button2_pin_key"
                        android:title="@string/prefs_button_pin_title"
                        android:summary="@string/prefs_button_pin_summary"
                        android:dialogTitle="@string/prefs_button_pin_dialog_title"
                        android:entries="@array/prefs_pin_entries"
                        android:entryValues="@array/prefs_pin_entry_values"/>

        <ListPreference android:key="@string/prefs_button2_type_key"
                        android:title="@string/prefs_button_type_title"
                        android:summary="@string/prefs_button_type_summary"
                        android:dialogTitle="@string/prefs_button_type_dialog_title"
                        android:entries="@array/prefs_button_type_entries"
                        android:entryValues="@array/prefs_button_type_entry_values"/>
                                   
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/prefs_button3_config">
    
        <EditTextPreference android:key="@string/prefs_button3_label_key"
                            android:dialogTitle="@string/prefs_button_label_dialog_title"
                            android:dialogMessage="@string/prefs_button_label_summary" 
                            android:title="@string/prefs_button_label_title"
                            android:summary="@string/prefs_button_label_summary"
                            android:defaultValue="Button"/>

        <ListPreference android:key="@string/prefs_button3_pin_key"
                        android:title="@string/prefs_button_pin_title"
                        android:summary="@string/prefs_button_pin_summary"
                        android:dialogTitle="@string/prefs_button_pin_dialog_title"
                        android:entries="@array/prefs_pin_entries"
                        android:entryValues="@array/prefs_pin_entry_values"/>

        <ListPreference android:key="@string/prefs_button3_type_key"
                        android:title="@string/prefs_button_type_title"
                        android:summary="@string/prefs_button_type_summary"
                        android:dialogTitle="@string/prefs_button_type_dialog_title"
                        android:entries="@array/prefs_button_type_entries"
                        android:entryValues="@array/prefs_button_type_entry_values"/>
                                   
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/prefs_button4_config">
    
        <EditTextPreference android:key="@string/prefs_button4_label_key" 
                            android:dialogTitle="@string/prefs_button_label_dialog_title"
                            android:dialogMessage="@string/prefs_button_label_summary"
                            android:title="@string/prefs_button_label_title"
                            android:summary="@string/prefs_button_label_summary"
                            android:defaultValue="Button"/>

        <ListPreference android:key="@string/prefs_button4_pin_key"
                        android:title="@string/prefs_button_pin_title"
                        android:summary="@string/prefs_button_pin_summary"
                        android:dialogTitle="@string/prefs_button_pin_dialog_title"
                        android:entries="@array/prefs_pin_entries"
                        android:entryValues="@array/prefs_pin_entry_values"/>

        <ListPreference android:key="@string/prefs_button4_type_key"
                        android:title="@string/prefs_button_type_title"
                        android:summary="@string/prefs_button_type_summary"
                        android:dialogTitle="@string/prefs_button_type_dialog_title"
                        android:entries="@array/prefs_button_type_entries"
                        android:entryValues="@array/prefs_button_type_entry_values"/>
                                   
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/prefs_button5_config">
    
        <EditTextPreference android:key="@string/prefs_button5_label_key"
                            android:dialogTitle="@string/prefs_button_label_dialog_title"
                            android:dialogMessage="@string/prefs_button_label_summary"
                            android:title="@string/prefs_button_label_title"
                            android:summary="@string/prefs_button_label_summary"
                            android:defaultValue="Button"/>

        <ListPreference android:key="@string/prefs_button5_pin_key"
                        android:title="@string/prefs_button_pin_title"
                        android:summary="@string/prefs_button_pin_summary"
                        android:dialogTitle="@string/prefs_button_pin_dialog_title"
                        android:entries="@array/prefs_pin_entries"
                        android:entryValues="@array/prefs_pin_entry_values"/>

        <ListPreference android:key="@string/prefs_button5_type_key"
                        android:title="@string/prefs_button_type_title"
                        android:summary="@string/prefs_button_type_summary"
                        android:dialogTitle="@string/prefs_button_type_dialog_title"
                        android:entries="@array/prefs_button_type_entries"
                        android:entryValues="@array/prefs_button_type_entry_values"/>
                                   
    </PreferenceScreen>
               
  </PreferenceCategory>
</PreferenceScreen>